--- a/informazioni.html
+++ b/informazioni.html
@@ -143,6 +143,11 @@
           <img src="immagini/js.jpg" alt="JAVASCRIPT" data-toggle="popover" data-html="true" title="<strong> JAVASCRIPT conoscenze </strong>"
             data-content="<ul>
                             <li> Basi di Javascript </li>
+                            <a
+                              href='https://drive.google.com/file/d/1TUI4oj411inWlo__DMoZkBEZzFdqxWiH/view?usp=sharing'
+                              class='btn btn-primary'
+                              role='button'
+                              > Vedi appunti di javascript </a>
                           </ul>
             "/>
           </div>
@@ -176,6 +181,11 @@
             <img src="immagini/angular.png" alt="angular" data-toggle="popover" data-html="true" title="<strong> angular conoscenze </strong>"
             data-content="<ul>
                             <li> Conoscenza media di angular </li>
+                            <a
+                              href='https://drive.google.com/file/d/1PidDb3eSeYI98eIDcJ98k44RM1vKwRUv/view?usp=sharing'
+                              class='btn btn-primary'
+                              role='button'
+                              > Vedi appunti di angular </a>
                           </ul>
                           "/>
           </div>
